--- a/HCore-Identity-PagesUI-Classes/HCore-Identity-PagesUI-Classes.csproj
+++ b/HCore-Identity-PagesUI-Classes/HCore-Identity-PagesUI-Classes.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Razor">
+﻿<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.4" />
+    <PackageReference Include="reCAPTCHA.AspNetCore" Version="2.2.3" />
   </ItemGroup>
   
   <ItemGroup>
